# kerdos-markets

./: .gitignore  Anchor.toml  README.md  auth.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.module.css  page.tsx
app/data/: markets.local.json
app/markets/[slug]/: MarketActionButtons.client.tsx  TradeModal.client.tsx  page.module.css  page.tsx
app/perfil/: page.tsx
app/privacidad/: page.tsx
app/terminos/: page.tsx
programs/CLOB/src/: domain.rs  engine.rs  ix_balances.rs  ix_init.rs  ix_orders.rs  ix_settle.rs  lib.rs  slab.rs  state.rs
programs/CLOB/tests/: 00_smoke.spec.ts  helpers.ts  (+5 more)
programs/kerdos_markets/: Cargo.toml
programs/kerdos_markets/src/: slab.rs
programs/kerdos_markets/tests/: clear_close.spec.ts  slippage.spec.ts
scripts/: debug-init.ts  seed-local.ts  seed-markets.ts
src/components/: CreateMarketForm.tsx  ProbabilityChart.tsx
src/hooks/: shrinkOnScrollMath.ts  useShrinkOnScroll.ts
src/lib/: markets.ts  utils.ts
src/styles/: base.css  index.css  tokens.css  utilities.css
src/theme/: tokens.ts  vars.ts
src/types/: next-auth.d.ts
test-results/: .last-run.json
tests/: auth-flow.spec.ts  header-auth-buttons.spec.ts  hero-categories.spec.ts  hero-header-spacing.spec.ts  hero-mobile-layout.spec.ts  hero-non-multi-actions.spec.ts  hero-search.spec.ts  market-detail-actions.spec.ts  market-detail-shrink.spec.ts  multi-option-hero.spec.ts  multi-option-market.spec.ts
tests/unit/: siws-challenge.test.ts
(+35 files in other folders)
